feat: land FEAT-QSENT + FEAT-RCLAQS end-to-end, refine FEAT-LAPS requirement
FEAT-QSENT (quiz-sentence-dsl): formalizes quizSentence as a first-class
course-domain concept. New quizsentence package with bidirectional conversion
between sentenceParts and DSL, hints as formal grammar elements, canonical
whitespace rules, and variants. Mapper now injects the converter.

FEAT-RCLAQS (rcla-quiz-sentence): exposes quizSentence in the LEMMA_ABSENCE
CorrectionContext via stamp-on-carrier. The mapper serializes the DSL in the
same memoized pass as sentences (R002/R003 by construction); the resolver
propagates verbatim; GetCmd exposes it in JSON. 15 tests across 4 modules.

FEAT-LAPS requirement refinement: strategy now consumes quizSentence DSL
instead of plain sentence and emits a structured candidate (quizSentence +
translation). DOUBT-CANDIDATE-NOTATION closed as RESOLVED via FEAT-QSENT.
Architecture scaffolding from earlier iteration is included but partial —
reopening the architect on next step.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>