@@ -56,13 +56,7 @@ public class FRcslJ001JourneyTest {
      */
     private AuditNode buildTree(DefaultLevelDiagnoses milestoneDiagnoses) {
         // Quiz entity — the sentence that is too long
-        AuditableQuiz quizEntity = new AuditableQuiz(
-                "The quick brown fox jumps over the lazy dog today here",
-                Collections.emptyList(),
-                "quiz-001",
-                "Quiz 1",
-                "Q001",
-                "El rapido zorro marron salta sobre el perro perezoso hoy aqui");
+        AuditableQuiz quizEntity = new AuditableQuiz(Collections.emptyList(), "quiz-001", "Quiz 1", "Q001", "El rapido zorro marron salta sobre el perro perezoso hoy aqui", List.of("The quick brown fox jumps over the lazy dog today here"), null);
 
         // SentenceLengthDiagnosis: tokenCount=15, range=[5,8], delta=+7 (15-8=7)
         SentenceLengthDiagnosis slDiagnosis = new SentenceLengthDiagnosis(
